Fix tour card alignment and navigation arrow positioning issues

--- a/css/activities.css
+++ b/css/activities.css
@@ -1051,12 +1051,10 @@ table {
 }
 
 #right-arrow {
-  left: 385px;
   background: url("../header-icons/right-arrow.png");
 }
 
 #left-arrow {
-  left: 5px;
   background: url("../header-icons/left-arrow.png");
 }
 
@@ -1079,9 +1077,20 @@ table {
 #left-arrow {
   position: absolute;
   background-size: 40px;
-  top: 195px;
+  top: 50%;
+  transform: translateY(-50%);
   height: 40px;
   width: 40px;
+  z-index: 1000;
+}
+
+#left-arrow {
+  left: 10px;
+}
+
+#right-arrow {
+  right: 10px;
+  left: auto;
 }
 
 .hover:hover {
@@ -1095,6 +1104,14 @@ table {
     width: 30px;
     background-size: 30px;
   }
+
+  #left-arrow {
+    left: 8px;
+  }
+
+  #right-arrow {
+    right: 8px;
+  }
 }
 
 @media (max-width: 450px) {
@@ -1104,6 +1121,14 @@ table {
     width: 25px;
     background-size: 25px;
   }
+
+  #left-arrow {
+    left: 5px;
+  }
+
+  #right-arrow {
+    right: 5px;
+  }
 }
 
 @media (max-width: 320px) {
@@ -1112,6 +1137,14 @@ table {
     height: 20px;
     width: 20px;
     background-size: 20px;
+  }
+
+  #left-arrow {
+    left: 3px;
+  }
+
+  #right-arrow {
+    right: 3px;
   }
 }
 
@@ -1177,13 +1210,15 @@ table {
 
 #helpBodyDiv {
   position: relative;
-  left: 45px;
+  left: 0;
+  right: 0;
+  margin: 0 auto;
   border: 0 !important;
   overflow-x: hidden;
   overflow-y: auto;
   width: 350px;
   background: #e8e8e8 !important;
-  padding: 1rem 1rem 0 0;
+  padding: 1rem 1rem 0 1rem;
   display: flex;
   flex-direction: column;
   justify-content: center;
